[tool.poetry]
name = "eth-analysis"
version = "0.1.0"
description = ""
authors = ["Husam92 <hossamjawaheri@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
web3 = "^5.2"
tqdm = "^4.36"
py-etherscan-api = "^0.8.0"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pylint = "^2.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
